--- a/exercicios/ex22/fundo006.html
+++ b/exercicios/ex22/fundo006.html
@@ -7,17 +7,21 @@
   <title>document</title>
   <style>
     body{
-      height: 100vh;
+      /*height: 100vh;
       background-color: black;
       background-image: url("imagens/wallpaper002.jpg");
       background-position: center center;
       background-repeat: no-repeat;
       background-size: cover;
+      background-attachment: fixed;*/
+
+      background: black url("imagens/wallpaper002.jpg") center center no-repeat fixed;
+      background-size: cover;
       
     }
     main{
       background-color: white;
-      width: 400px;
+      max-width: 400px;
       padding: 10px;
       margin: auto;
       border: 1px solid darkblue;
@@ -28,9 +32,12 @@
 <body>
   <main>
     <h1>Teste de imagem de fundo</h1>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi molestiae necessitatibus recusandae eos possimus error nesciunt tempora quo deserunt vitae voluptatem suscipit fugiat sint facere magnam animi quis, rem corrupti!</p>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi molestiae necessitatibus recusandae eos possimus error nesciunt tempora quo deserunt vitae voluptatem suscipit fugiat sint facere magnam animi quis, rem corrupti!</p>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi molestiae necessitatibus recusandae eos possimus error nesciunt tempora quo deserunt vitae voluptatem suscipit fugiat sint facere magnam animi quis, rem corrupti!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod id commodi nobis, reiciendis quaerat ad necessitatibus eum omnis dolorem nisi minima alias impedit recusandae, aperiam dolore natus illo harum magni.Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod id commodi nobis, reiciendis quaerat ad necessitatibus eum omnis dolorem nisi minima alias impedit recusandae, aperiam dolore natus illo harum magni.Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod id commodi nobis, reiciendis quaerat ad necessitatibus eum omnis dolorem nisi minima alias impedit recusandae, aperiam dolore natus illo harum magni.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod id commodi nobis, reiciendis quaerat ad necessitatibus eum omnis dolorem nisi minima alias impedit recusandae, aperiam dolore natus illo harum magni.Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod id commodi nobis, reiciendis quaerat ad necessitatibus eum omnis dolorem nisi minima alias impedit recusandae, aperiam dolore natus illo harum magni.Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod id commodi nobis, reiciendis quaerat ad necessitatibus eum omnis dolorem nisi minima alias impedit recusandae, aperiam dolore natus illo harum magni.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod id commodi nobis, reiciendis quaerat ad necessitatibus eum omnis dolorem nisi minima alias impedit recusandae, aperiam dolore natus illo harum magni.Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod id commodi nobis, reiciendis quaerat ad necessitatibus eum omnis dolorem nisi minima alias impedit recusandae, aperiam dolore natus illo harum magni.Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod id commodi nobis, reiciendis quaerat ad necessitatibus eum omnis dolorem nisi minima alias impedit recusandae, aperiam dolore natus illo harum magni.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod id commodi nobis, reiciendis quaerat ad necessitatibus eum omnis dolorem nisi minima alias impedit recusandae, aperiam dolore natus illo harum magni.Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod id commodi nobis, reiciendis quaerat ad necessitatibus eum omnis dolorem nisi minima alias impedit recusandae, aperiam dolore natus illo harum magni.Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod id commodi nobis, reiciendis quaerat ad necessitatibus eum omnis dolorem nisi minima alias impedit recusandae, aperiam dolore natus illo harum magni.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod id commodi nobis, reiciendis quaerat ad necessitatibus eum omnis dolorem nisi minima alias impedit recusandae, aperiam dolore natus illo harum magni.Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod id commodi nobis, reiciendis quaerat ad necessitatibus eum omnis dolorem nisi minima alias impedit recusandae, aperiam dolore natus illo harum magni.Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod id commodi nobis, reiciendis quaerat ad necessitatibus eum omnis dolorem nisi minima alias impedit recusandae, aperiam dolore natus illo harum magni.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod id commodi nobis, reiciendis quaerat ad necessitatibus eum omnis dolorem nisi minima alias impedit recusandae, aperiam dolore natus illo harum magni.Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod id commodi nobis, reiciendis quaerat ad necessitatibus eum omnis dolorem nisi minima alias impedit recusandae, aperiam dolore natus illo harum magni.Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod id commodi nobis, reiciendis quaerat ad necessitatibus eum omnis dolorem nisi minima alias impedit recusandae, aperiam dolore natus illo harum magni.</p>
   </main>
   
 </body>
